--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
-  }
-}
+    "nodemon": "^2.0.15"
+  },
+ "nodemonConfig": {
+  "env": {
+     "CONNECTION_STRING": "YOUR_CONNECTION_STRING"
+   }
+ }
