--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon ./bin/www",
     "start": "node ./bin/www",
-    "build-client": "cd ./client && npm build"
+    "build-client": "cd ./client && yarn build"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -14,14 +14,10 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "moongoose": "^0.0.5",
+    "mongoose": "^6.2.3",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
-  },
- "nodemonConfig": {
-  "env": {
-     "CONNECTION_STRING": "YOUR_CONNECTION_STRING"
-   }
- }
+  }
+}
